# arr_cleanup

./: .gitignore  LICENSE  README.md  cleanup.py  config.example.toml  pyproject.toml  requirements-dev.txt  requirements.txt
arr_cleanup/: __init__.py  __main__.py  cache.py  cli.py  config.py  deletion.py  engine.py  export.py  matching.py  models.py  session.py  ui.py
arr_cleanup/clients/: __init__.py  guids.py  plex.py  radarr.py  sonarr.py  tautulli.py
arr_cleanup/filters/: __init__.py  base.py  config.py  eligibility.py  rating.py  saga.py  watched.py
arr_cleanup/providers/: __init__.py  base.py  parsing.py  radarr.py  sonarr.py
arr_cleanup/sources/: __init__.py  base.py  plex.py  tautulli.py
docs/: capture.py
tests/: test_cache.py  test_config.py  test_export.py  test_filter_config.py  test_filters.py  test_matching.py  test_models.py  test_providers.py  test_providers_registry.py  test_sources.py  test_sources_registry.py  test_ui.py
